@@ -27,12 +27,17 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
 
-import static java.util.stream.Collectors.toList;
 import static org.springframework.http.HttpStatus.BAD_REQUEST;
+import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
 import static org.synyx.urlaubsverwaltung.security.SecurityRules.IS_BOSS_OR_OFFICE;
 
+@Tag(
+    name = "public holidays",
+    description = """
+        Public Holidays: Returns information about public holidays
+        """
+)
 @RestControllerAdviceMarker
-@Tag(name = "public holidays", description = "Public Holidays: Get information about public holidays")
 @RestController
 @RequestMapping("/api")
 public class PublicHolidayApiController {
@@ -45,7 +50,6 @@ public class PublicHolidayApiController {
     @Autowired
     public PublicHolidayApiController(PublicHolidaysService publicHolidaysService, PersonService personService,
                                       WorkingTimeService workingTimeService, SettingsService settingsService) {
-
         this.publicHolidaysService = publicHolidaysService;
         this.personService = personService;
         this.workingTimeService = workingTimeService;
@@ -54,10 +58,14 @@ public class PublicHolidayApiController {
 
     @Operation(
         summary = "Get all public holidays for a certain period",
-        description = "Get all public holidays for a certain period. "
-            + "Information only reachable for users with role office."
+        description = """
+            Returns all global public holidays for a certain period based on the global public holiday regulations
+
+            Needed basic authorities:
+            * user
+            """
     )
-    @GetMapping("public-holidays")
+    @GetMapping(path = "public-holidays", produces = APPLICATION_JSON_VALUE)
     @PreAuthorize("hasAuthority('USER')")
     public PublicHolidaysDto getPublicHolidays(
         @Parameter(description = "Start date with pattern yyyy-MM-dd")
@@ -79,10 +87,21 @@ public class PublicHolidayApiController {
     }
 
     @Operation(
-        summary = "Get all public holidays for a certain period", description = "Get all public holidays for a certain period. "
-        + "Information only reachable for users with role office and for own public holidays."
+        summary = "Returns all public holidays for a certain period and given person",
+        description = """
+            Returns all public holidays for a certain period based on the specific public holiday regulations of the given person
+
+            Needed basic authorities:
+            * user
+
+            Needed additional authorities:
+            * user                   - if the requested public holidays of the person id is the one of the authenticated user
+            * department_head        - if the requested public holidays of the person id is a managed person of the department head and not of the authenticated user
+            * second_stage_authority - if the requested public holidays of the person id is a managed person of the second stage authority and not of the authenticated user
+            * boss or office         - if the requested public holidays of the person id is any id but not of the authenticated user
+            """
     )
-    @GetMapping("/persons/{personId}/public-holidays")
+    @GetMapping(path = "/persons/{personId}/public-holidays", produces = APPLICATION_JSON_VALUE)
     @PreAuthorize(IS_BOSS_OR_OFFICE +
         " or @userApiMethodSecurity.isSamePersonId(authentication, #personId)" +
         " or @userApiMethodSecurity.isInDepartmentOfDepartmentHead(authentication, #personId)" +
@@ -117,7 +136,7 @@ public class PublicHolidayApiController {
             .map(entry -> getPublicHolidays(entry.getKey().getStartDate(), entry.getKey().getEndDate(), entry.getValue(), workingTimeSettings))
             .flatMap(List::stream)
             .sorted(Comparator.comparing(PublicHolidayDto::getDate))
-            .collect(toList());
+            .toList();
 
         return new PublicHolidaysDto(publicHolidays);
     }
@@ -125,7 +144,7 @@ public class PublicHolidayApiController {
     private List<PublicHolidayDto> getPublicHolidays(LocalDate startDate, LocalDate endDate, FederalState federalState, WorkingTimeSettings workingTimeSettings) {
         return publicHolidaysService.getPublicHolidays(startDate, endDate, federalState, workingTimeSettings).stream()
             .map(this::mapPublicHolidayToDto)
-            .collect(toList());
+            .toList();
     }
 
     private void checkValidPeriod(LocalDate startDate, LocalDate endDate) {
